# QRealFourier

./: CMakeLists.txt  Copyright.txt  License.txt  README.md  ReadMe.txt  adapt  gitpush  revert
cmake/: FindQt5.cmake
code/: CMakeLists.txt  README.md
code/cmake/: FindQRealFourier.cmake  Packaging.cmake  QRealFourierConfig.cmake  Version.cmake
code/examples/: example1.cpp  example2.cpp  example3.cpp  print.h
code/examples/standalone/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  standalone  standalone.cpp
code/headers/: qcomplexnumber.h  qfouriercalculator.h  qfourierfixedcalculator.h  qfouriertransformer.h  qfouriervariablecalculator.h  qwindowfunction.h
code/sources/: qcomplexnumber.cpp  qfouriercalculator.cpp  qfourierfixedcalculator.cpp  qfouriertransformer.cpp  qfouriervariablecalculator.cpp  qwindowfunction.cpp
headers/: qcomplexnumber.h  qfourierfixedcalculator.h  qfourierfixedthread.h  qfourierthread.h  qfouriertransformer.h  qfouriervariablecalculator.h  qfouriervariablethread.h  qhammingwindower.h  qhannwindower.h  qrectangularwindower.h  qwindower.h  qwindowfunction.h
installer/mac/: Visore.pkgproj
installer/windows/Autosave/: autosave_2012-03-22_14-50-05.suf
installer/windows/theme/Visore/: Visore.xml
other/: adapt  revert
sources/: qcomplexnumber.cpp  qfouriercalculator.cpp  qfourierfixedcalculator.cpp  qfourierfixedthread.cpp  qfourierthread.cpp  qfouriertransformer.cpp  qfouriervariablethread.cpp  qhammingwindower.cpp  qhannwindower.cpp  qrectangularwindower.cpp  qwindower.cpp  qwindowfunction.cpp
tests/: fourierreceiver.cpp  fourierreceiver.h  print.h  sameThread.cpp  seperateThread.cpp  test1.cpp  test2.cpp  test3.cpp
