#Setup Visore
PROJECT(QRealFourier)

#Setup CMake
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

#Setup directory paths
SET(ROOT ${CMAKE_CURRENT_SOURCE_DIR})
SET(FFTREAL ${ROOT}/fftreal)

#Setup CMake
SET(CMAKE_MODULE_PATH ${ROOT}/cmake)

#Setup Qt5
FIND_PACKAGE(Qt5 COMPONENTS Core)

#Include common headers
INCLUDE_DIRECTORIES(${ROOT}/headers ${FFTREAL})

#Initiate source files
FILE(GLOB SOURCES ${ROOT}/sources/*.cpp ${FFTREAL}/*.hpp)
FILE(GLOB HEADERS_ALL ${ROOT}/headers/*.h ${FFTREAL}/*.h)
SET(HEADERS)
SET(MOC_HEADERS)
FOREACH(HEADER ${HEADERS_ALL})
    FILE(STRINGS "${HEADER}" lines REGEX "Q_OBJECT")
    IF(lines)
        LIST(APPEND MOC_HEADERS "${HEADER}")
	ELSE()
		LIST(APPEND HEADERS "${HEADER}")
    ENDIF()
ENDFOREACH()

#Wrap Qt files
QT5_WRAP_CPP(WRAPPER_HEADERS ${MOC_HEADERS})

#Create library
ADD_LIBRARY(qrealfourier SHARED ${HEADERS} ${WRAPPER_HEADERS} ${SOURCES})
SET_TARGET_PROPERTIES(qrealfourier PROPERTIES LINKER_LANGUAGE CXX)
TARGET_LINK_LIBRARIES(qrealfourier ${QT_QTCORE_LIBRARIES})
