#Setup Visore
PROJECT(QRealFourier)

#Setup CMake
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

#Setup directory paths
SET(ROOT ${CMAKE_CURRENT_SOURCE_DIR})
SET(FFTREAL ${ROOT}/fftreal)
SET(TESTS ${ROOT}/tests)

#Setup CMake
SET(CMAKE_MODULE_PATH ${ROOT}/cmake)

#Setup Qt
FIND_PACKAGE(Qt COMPONENTS Core REQUIRED)
ADD_DEFINITIONS(${QT_DEFINITIONS})
INCLUDE(${QT_USE_FILE})

#Include common headers
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${ROOT}/headers ${FFTREAL})

#Initiate source files
FILE(GLOB SOURCES ${ROOT}/sources/*.cpp ${FFTREAL}/*.hpp)
FILE(GLOB HEADERS_ALL ${ROOT}/headers/*.h ${FFTREAL}/*.h)
SET(HEADERS)
SET(MOC_HEADERS)
FOREACH(HEADER ${HEADERS_ALL})
    FILE(STRINGS "${HEADER}" lines REGEX "Q_OBJECT")
    IF(lines)
        LIST(APPEND MOC_HEADERS "${HEADER}")
	ELSE()
		LIST(APPEND HEADERS "${HEADER}")
    ENDIF()
ENDFOREACH()

#Wrap Qt files
QT4_WRAP_CPP(WRAPPER_HEADERS ${MOC_HEADERS})

#Create library
ADD_LIBRARY(qrealfourier SHARED ${HEADERS} ${WRAPPER_HEADERS} ${SOURCES})
SET_TARGET_PROPERTIES(qrealfourier PROPERTIES LINKER_LANGUAGE CXX)
TARGET_LINK_LIBRARIES(qrealfourier ${QT_QTCORE_LIBRARY})

#Create test cases
ADD_EXECUTABLE(SameThread ${TESTS}/sameThread.cpp)
TARGET_LINK_LIBRARIES(SameThread qrealfourier)
QT4_WRAP_CPP(THREAD_WRAPPER_HEADERS ${TESTS}/fourierreceiver.h)
ADD_EXECUTABLE(SeperateThread ${THREAD_WRAPPER_HEADERS} ${TESTS}/seperateThread.cpp ${TESTS}/fourierreceiver.cpp)
TARGET_LINK_LIBRARIES(SeperateThread qrealfourier)
