#Setup Visore
PROJECT(QRealFourier)

#Setup CMake
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

#Set version
SET(VERSION_MAJOR 0)
SET(VERSION_MINOR 2)
SET(VERSION_PATCH 0)

#Setup directory paths
SET(ROOT ${CMAKE_CURRENT_SOURCE_DIR})
SET(FFTREAL ${ROOT}/fftreal)
SET(TESTS ${ROOT}/tests)

#Setup CMake
SET(CMAKE_MODULE_PATH ${ROOT}/cmake)

#Setup Qt
FIND_PACKAGE(Qt COMPONENTS Core REQUIRED)
ADD_DEFINITIONS(${QT_DEFINITIONS})
INCLUDE(${QT_USE_FILE})

#Include common headers
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${ROOT}/headers ${FFTREAL})

#Initiate source files
FILE(GLOB SOURCES ${ROOT}/sources/*.cpp ${FFTREAL}/*.hpp)
FILE(GLOB HEADERS_ALL ${ROOT}/headers/*.h ${FFTREAL}/*.h)
SET(HEADERS)
SET(MOC_HEADERS)
FOREACH(HEADER ${HEADERS_ALL})
    FILE(STRINGS "${HEADER}" lines REGEX "Q_OBJECT")
    IF(lines)
        LIST(APPEND MOC_HEADERS "${HEADER}")
	ELSE()
		LIST(APPEND HEADERS "${HEADER}")
    ENDIF()
ENDFOREACH()

#Wrap Qt files
QT4_WRAP_CPP(WRAPPER_HEADERS ${MOC_HEADERS})

#Create dynamic library
ADD_LIBRARY(qrealfourier SHARED ${HEADERS} ${WRAPPER_HEADERS} ${SOURCES})
SET_TARGET_PROPERTIES(qrealfourier PROPERTIES LINKER_LANGUAGE CXX)
TARGET_LINK_LIBRARIES(qrealfourier ${QT_QTCORE_LIBRARY})
SET_TARGET_PROPERTIES(qrealfourier PROPERTIES VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")
SET_TARGET_PROPERTIES(qrealfourier PROPERTIES SOVERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")

#Create static library
ADD_LIBRARY(qrealfourierstatic STATIC ${HEADERS} ${WRAPPER_HEADERS} ${SOURCES})
SET_TARGET_PROPERTIES(qrealfourierstatic PROPERTIES LINKER_LANGUAGE CXX)
TARGET_LINK_LIBRARIES(qrealfourierstatic ${QT_QTCORE_LIBRARY})
SET_TARGET_PROPERTIES(qrealfourierstatic PROPERTIES OUTPUT_NAME qrealfourier)
SET_TARGET_PROPERTIES(qrealfourierstatic PROPERTIES VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")
SET_TARGET_PROPERTIES(qrealfourierstatic PROPERTIES SOVERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")

#Create test cases
ADD_EXECUTABLE(test1 ${TESTS}/test1.cpp)
TARGET_LINK_LIBRARIES(test1 qrealfourier)
ADD_EXECUTABLE(test2 ${TESTS}/test2.cpp)
TARGET_LINK_LIBRARIES(test2 qrealfourier)
ADD_EXECUTABLE(test3 ${TESTS}/test3.cpp)
TARGET_LINK_LIBRARIES(test3 qrealfourier)
