#Setup Visore
PROJECT(Standalone)

#Setup CMake
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

#Setup Qt
FIND_PACKAGE(Qt COMPONENTS Core REQUIRED)
ADD_DEFINITIONS(${QT_DEFINITIONS})
INCLUDE(${QT_USE_FILE})

#Setup QRealFourier
FIND_PACKAGE(QRealFourier REQUIRED)
INCLUDE_DIRECTORIES(${QREALFOURIER_INCLUDE_DIR})

#Create executable
ADD_EXECUTABLE(standalone standalone.cpp)
TARGET_LINK_LIBRARIES(standalone ${QREALFOURIER_LIBRARY})
